# android_scanner

./: settings.gradle
app/: build.gradle  config_sample_all.gradle  config_sample_dependencies.gradle  config_sample_packagingOptions.gradle
app/src/androidTest/java/com/example/android_scanner/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/android_scanner/: AircraftActivity.java  CameraApplication.java  ConnectionActivity.java  InfoWindowData.java  MApplication.java  MainActivity.java  ObjectInfoWindow.java
app/src/main/res/layout/: activity_aircraft.xml  activity_connection.xml  activity_main.xml  object_info_window_view.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/android_scanner/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
scanner/: CMakeLists.txt  cmds.txt
scanner/include/: Logger.h  detector.h  motionDetector.h  scanner.h  sweeper.h
scanner/src/: Logger.cpp  detector.cpp  motionDetector.cpp  scanner.cpp  sweeper.cpp
